Feat: Upload Arquivos do Projeto | HTML| CSS| imgs
Upload completo dos arquivos do projeto.
Html: com todos os elementos da pagina
Css: com todas as configurações de Layout
imagens: todas as imagens usadas no projeto
Prints: Pasta com prints do projeto

--- a/Crystal_Glass_Ui/index.html
+++ b/Crystal_Glass_Ui/index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Crystal Glass Ui</title>
+    <link rel="stylesheet" href="./assets/style/style.css">
+</head>
+<body>
+    <section>
+        <div class="container">
+            <header>
+                <a href="#" class="logo">Logo</a>
+                <ul>
+                    <li><a href="#" class="active">Home </a></li>
+                    <li><a href="#">Sobre </a></li>
+                    <li><a href="#">Produtos </a></li>
+                    <li><a href="#">Contato </a></li>
+                </ul>
 
+            </header>
+            <div class="content"> 
+                <h2>Doces ou Truques</h2>
+                <p>Confeitaria Artesanal</p> <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>                    
+                    Quisquam, quibusdam, quae, quod, quae, quae, quae, quae, <br>
+                    quae, quae, quae, quae, quae, quae, quae, quae, quae, quae, <br>
+                     <br>
+                </p>
+                <a href="#"> Leia mais</a>
+
+
+            </div>
+            <div class="imageBox">
+                <img src="./assets/images/character.png" alt="image">
+
+            </div>
+
+            <ul class="socialButton">
+                <li> <a href="#"> <img src="./assets/images/facebook.png"></a></li>
+                <li> <a href="#"> <img src="./assets/images/twitter.png"></a></li>
+                <li> <a href="#"> <img src="./assets/images/instagram.png"></a></li>
+            </ul>
+            <p class="copyrightText"> Copyright ©2023 Marcel Nogueira. All Rights Reserved. </p>
+
+            
+        </div>
+    
+    </section>
+</body>
+</html>
