:feat: add fist name & last name fields

--- a/green_registration_form/index.html
+++ b/green_registration_form/index.html
@@ -33,8 +33,13 @@
         <form>
         
             <div class="name_LastName ">
-                FORM AREA
+                <label for="name">First name:</label>
+                <label for="lastname">Last name:</label>
 
+            </div> 
+            <div class="text_inputs">
+                <input type="text" name="name">
+                <input type="text" name="lastname">
             </div>
         </form>
 
