:sparkles: feat new text fields

--- a/green_registration_form/index.html
+++ b/green_registration_form/index.html
@@ -41,6 +41,34 @@
                 <input type="text" name="name">
                 <input type="text" name="lastname">
             </div>
+
+            <div class="text_inputs text_box">
+                <label class="title" for="username">User name</label>
+                <input class="text_box" type="text" name="username">
+            </div>
+
+            <div class="text_inputs text_box">
+                <label class="title" for="email">E-mail</label>
+                <input class="text_box" type="text" name="email">
+            </div>
+
+            <div class="text_inputs text_box">
+                <label class="title" for="ph.number">Ph. number</label>
+                <input class="text_box" type="number" name="phonenumber">
+            </div>
+
+            <div class="text_inputs text_box">
+                <label class="title" for="password">Password</label>
+                <input class="text_box" type="password" name="password">
+            </div>
+
+            <div class="text_inputs text_box">
+                <label class="title" for="confirmepassword">Confirm password</label>
+                <input class="text_box" type="password" name="confirmpassword" >
+            </div>
+
+            <input class="button_submit" type="submit" value="Submit">
+
         </form>
 
     </div>
