:lipstick: style: Submit Button

--- a/green_registration_form/index.html
+++ b/green_registration_form/index.html
@@ -67,7 +67,9 @@
                 <input class="text_box" type="password" name="confirmpassword" >
             </div>
 
-            <input class="button_submit" type="submit" value="Submit">
+            <div class="button">
+            <input type="submit" value="Submit">
+            </div>
 
         </form>
 
