:ok_hand: style: Css comments

--- a/Awax_website_project/index.html
+++ b/Awax_website_project/index.html
@@ -46,7 +46,9 @@
     <!-- MAIN CONTENT  -->
 
     <main>
-
+         <section class="banner">
+            ...
+         </section>
 
     </main>
 
