:sparkles: feat: add banner content

--- a/Awax_website_project/index.html
+++ b/Awax_website_project/index.html
@@ -46,8 +46,19 @@
     <!-- MAIN CONTENT  -->
 
     <main>
+
          <section class="banner">
-            ...
+            <div class="sliders">
+                <div class="slide">
+                    SLIDE 1
+                </div>
+                <div class="slide">
+                    SLIDE 2
+                </div>
+                <div class="slide">
+                    SLIDE 3
+                </div>
+            </div>
          </section>
 
     </main>
