--- a/Awax_website_project/index.html
+++ b/Awax_website_project/index.html
@@ -50,7 +50,13 @@
          <section class="banner">
             <div class="sliders">
                 <div class="slide">
-                    SLIDE 1
+                    <div class="slidearea">
+                        <h1>Design is about <br/> 
+                            <span>Communication</span> 
+                        </h1>
+                        <h2>Call us: +00 0 1234 5678</h2>
+                        <a href="">Get in touch</a>
+                    </div>
                 </div>
                 <div class="slide">
                     SLIDE 2
