:sparkles: feat: Banner circles

--- a/Awax_website_project/index.html
+++ b/Awax_website_project/index.html
@@ -47,8 +47,9 @@
 
     <main>
 
-         <section class="banner">
-            <div class="sliders">
+        <section class="banner">
+            <!-- -000vw slide1 | -100vw slide 2 | -200vw slide 3 -->
+            <div class="sliders" style="margin-left: -000vw;">
                 <div class="slide">
                     <div class="slidearea">
                         <h1>Design is about <br/> 
@@ -57,15 +58,34 @@
                         <h2>Call us: +00 0 1234 5678</h2>
                         <a href="">Get in touch</a>
                     </div>
-                </div>
-                <div class="slide">
-                    SLIDE 2
-                </div>
-                <div class="slide">
-                    SLIDE 3
+                </div><div class="slide">
+                    <div class="slidearea">
+                        <h1>Design is about <br/> 
+                            <span>SLIDE 2</span> 
+                        </h1>
+                        <h2>Call us: +00 0 1234 5678</h2>
+                        <a href="">Get in touch</a>
+                    </div>
+                </div><div class="slide">
+                    <div class="slidearea">
+                        <h1>Design is about <br/> 
+                            <span>SLIDE 3</span> 
+                        </h1>
+                        <h2>Call us: +00 0 1234 5678</h2>
+                        <a href="">Get in touch</a>
+                    </div>
                 </div>
             </div>
-         </section>
+
+            <!-- Slider Pointers  -->
+            
+            <div class="sliders_pointers">
+                <div class="pointer active"></div>
+                <div class="pointer"></div>
+                <div class="pointer"></div>
+
+            </div>
+        </section>
 
     </main>
 
