:sparkles: feat: Add Services Area

--- a/Awax_website_project/index.html
+++ b/Awax_website_project/index.html
@@ -121,7 +121,33 @@
         <section class="default dark">
             <div class="section_title"> Services </div>
             <div class="section_description"> Services that we provide </div>
-            <div class="section_body"> .... </div>
+
+            <div class="section_body"> 
+            
+                <div class="section_services">
+                    <div class="section_service">
+                        <img src="./assets/img/icons/medalha.png" alt="">
+                        <h4>High Quality Design</h4>
+                        <p>Vestibulum at interdum</p>
+                    </div>
+                    <div class="section_service">
+                        <img src="./assets/img/icons/estrela.png" alt="">
+                        <h4>Modern Design</h4>
+                        <p>tincidunt dui. Suspendisse</p>
+                    </div>
+                    <div class="section_service">
+                        <img src="./assets/img/icons/relogio.png" alt="">
+                        <h4>Regular Updates</h4>
+                        <p>ursus eget erat at mattis</p>
+                    </div>
+                    <div class="section_service">
+                        <img src="./assets/img/icons/balao.png" alt="">
+                        <h4>Fast and free support</h4>
+                        <p>Aliquam vel urna euismod,</p>
+                    </div>
+                </div>
+
+            </div>
 
         </section>
 
