--- a/Awax_website_project/index.html
+++ b/Awax_website_project/index.html
@@ -151,6 +151,30 @@
 
         </section>
 
+        <section class="default light">
+            <div class="section_title"> Our Projects </div>
+            <div class="section_description"> What we create </div>
+            <div class="section_body">
+                <div class="section_projects">
+                   <div class="section_projects_filters">
+
+                    <ul>
+                        <li>All</li>
+                        <li class="active">Photos</li>
+                        <li>Branding</li>
+                        <li>Adverts</li>
+                        <li>Development</li>
+                        <li>Misc</li>
+                    </ul>
+
+                   </div>
+                    
+                </div>
+
+            </div>
+
+        </section>
+
 
     </main>
 
