--- a/Awax_website_project/index.html
+++ b/Awax_website_project/index.html
@@ -335,17 +335,44 @@
                         <div class="sliders" style="margin-left: 0;">
                             <div class="slide">
                                 <div class="slidearea">
-                                    ...
+                                    <img class="section_team_avatar" src="./media/mulher1.png" alt="avatar image">
+                                    <div class="section_team_name">Jane Doe</div>
+                                    <div class="section_team_role">Master Mind</div>
+                                    <div class="section_team_social">
+                                        <a href=""><img src="./assets/img/icons/facebook.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/googleplus.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/linkedin.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/pinterest.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/twitter.png" alt="Team Social"></a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="slide">
                                 <div class="slidearea">
-                                    ...
+                                    <img class="section_team_avatar" src="./media/homem1.png" alt="avatar image">
+                                    <div class="section_team_name">Mike Chiller</div>
+                                    <div class="section_team_role">Creative Head</div>
+                                    <div class="section_team_social">
+                                        <a href=""><img src="./assets/img/icons/facebook.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/googleplus.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/linkedin.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/pinterest.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/twitter.png" alt="Team Social"></a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="slide">
                                 <div class="slidearea">
-                                    ...
+                                    <img class="section_team_avatar" src="./media/mulher2.png" alt="avatar image">
+                                    <div class="section_team_name">Anna Johns</div>
+                                    <div class="section_team_role">Technical Lead</div>
+                                    <div class="section_team_social">
+                                        <a href=""><img src="./assets/img/icons/facebook.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/googleplus.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/linkedin.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/pinterest.png" alt="Team Social"></a>
+                                        <a href=""><img src="./assets/img/icons/twitter.png" alt="Team Social"></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
